--- a/Librairies.ipynb
+++ b/Librairies.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4144,10 +4144,271 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bokeh \n",
+    "\n",
+    "Bokeh est une bibliothèque de visualisation interactive qui cible les navigateurs Web afin de faire de la datavisualisation. Son objectif est de fournir une construction élégante et concise de graphiques variés interactifs de hautes performances sur des jeux de données très volumineux ou en flux continu. Bokeh peut aider tous ceux qui souhaitent créer rapidement et facilement des graphiques interactifs, des tableaux de bord et des applications de \n",
+    "données.\n",
+    "\n",
+    "### Installation via pip \n",
+    "```python \n",
+    "pip install bokeh\n",
+    "```\n",
+    "\n",
+    "### Quickstart"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Importer la librairies \n",
+    "from bokeh.plotting import figure, output_file, show\n",
+    "#déclaration du fichier de sortie \n",
+    "output_file(\"test.html\")\n",
+    "#figure \n",
+    "p = figure()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data random\n",
+    "p.line([1, 2, 3, 4, 5], [6, 7, 2, 4, 5], line_width=2)\n",
+    "#affichage du plot\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Afficher plus d'informations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#d'autre data random \n",
+    "x = [0.1, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0]\n",
+    "y0 = [i**2 for i in x]\n",
+    "y1 = [10**i for i in x]\n",
+    "y2 = [10**(i**2) for i in x]\n",
+    "\n",
+    "#output\n",
+    "output_file(\"log_lines.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# créer un nouveau plot\n",
+    "p = figure(\n",
+    "   tools=\"pan,box_zoom,reset,save\",\n",
+    "   y_axis_type=\"log\", y_range=[0.001, 10**11], title=\"log axis example\",\n",
+    "   x_axis_label='sections', y_axis_label='particles'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ajouter les data\n",
+    "p.line(x, x, legend=\"y=x\")\n",
+    "p.circle(x, x, legend=\"y=x\", fill_color=\"white\", size=8)\n",
+    "p.line(x, y0, legend=\"y=x^2\", line_width=3)\n",
+    "p.line(x, y1, legend=\"y=10^x\", line_color=\"red\")\n",
+    "p.circle(x, y1, legend=\"y=10^x\", fill_color=\"red\", line_color=\"red\", size=6)\n",
+    "p.line(x, y2, legend=\"y=10^x^2\", line_color=\"orange\", line_dash=\"4 4\")\n",
+    "\n",
+    "# affichier la figure \n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Jouer avec les vecteurs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepare d'autres random data\n",
+    "N = 4000\n",
+    "x = np.random.random(size=N) * 100\n",
+    "y = np.random.random(size=N) * 100\n",
+    "radii = np.random.random(size=N) * 1.5\n",
+    "#configurer les couleurs \n",
+    "colors = [\n",
+    "    \"#%02x%02x%02x\" % (int(r), int(g), 150) for r, g in zip(50+2*x, 30+2*y)\n",
+    "]\n",
+    "\n",
+    "#output\n",
+    "output_file(\"color_scatter.html\", title=\"color_scatter.py example\", mode=\"cdn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TOOLS = \"crosshair,pan,wheel_zoom,box_zoom,reset,box_select,lasso_select\"\n",
+    "#figure avec les paramètres ci-dessus \n",
+    "p = figure(tools=TOOLS, x_range=(0, 100), y_range=(0, 100))\n",
+    "#ajouter les points en fonction des couleurs et tailles \n",
+    "p.circle(x, y, radius=radii, fill_color=colors, fill_alpha=0.6, line_color=None)\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Afficher les Datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using data directory: /Users/benjamindallard/.bokeh/data\n",
+      "Downloading: CGM.csv (1589982 bytes)\n",
+      "   1589982 [100.00%]\n",
+      "Downloading: US_Counties.zip (3182088 bytes)\n",
+      "   3182088 [100.00%]\n",
+      "Unpacking: US_Counties.csv\n",
+      "Downloading: us_cities.json (713565 bytes)\n",
+      "    713565 [100.00%]\n",
+      "Downloading: unemployment09.csv (253301 bytes)\n",
+      "    253301 [100.00%]\n",
+      "Downloading: AAPL.csv (166698 bytes)\n",
+      "    166698 [100.00%]\n",
+      "Downloading: FB.csv (9706 bytes)\n",
+      "      9706 [100.00%]\n",
+      "Downloading: GOOG.csv (113894 bytes)\n",
+      "    113894 [100.00%]\n",
+      "Downloading: IBM.csv (165625 bytes)\n",
+      "    165625 [100.00%]\n",
+      "Downloading: MSFT.csv (161614 bytes)\n",
+      "    161614 [100.00%]\n",
+      "Downloading: WPP2012_SA_DB03_POPULATION_QUINQUENNIAL.zip (5148539 bytes)\n",
+      "   5148539 [100.00%]\n",
+      "Unpacking: WPP2012_SA_DB03_POPULATION_QUINQUENNIAL.csv\n",
+      "Downloading: gapminder_fertility.csv (64346 bytes)\n",
+      "     64346 [100.00%]\n",
+      "Downloading: gapminder_population.csv (94509 bytes)\n",
+      "     94509 [100.00%]\n",
+      "Downloading: gapminder_life_expectancy.csv (73243 bytes)\n",
+      "     73243 [100.00%]\n",
+      "Downloading: gapminder_regions.csv (7781 bytes)\n",
+      "      7781 [100.00%]\n",
+      "Downloading: world_cities.zip (646858 bytes)\n",
+      "    646858 [100.00%]\n",
+      "Unpacking: world_cities.csv\n",
+      "Downloading: airports.json (6373 bytes)\n",
+      "      6373 [100.00%]\n",
+      "Downloading: movies.db.zip (5067833 bytes)\n",
+      "   5067833 [100.00%]\n",
+      "Unpacking: movies.db\n",
+      "Downloading: airports.csv (203190 bytes)\n",
+      "    203190 [100.00%]\n",
+      "Downloading: routes.csv (377280 bytes)\n",
+      "    377280 [100.00%]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bokeh.sampledata\n",
+    "#télécharger les dataset de bokeh \n",
+    "bokeh.sampledata.download()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.plotting import figure, output_file, show\n",
+    "from bokeh.sampledata.stocks import AAPL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#préparer d'autre random data\n",
+    "aapl = np.array(AAPL['adj_close'])\n",
+    "aapl_dates = np.array(AAPL['date'], dtype=np.datetime64)\n",
+    "#paramétrage\n",
+    "window_size = 30\n",
+    "window = np.ones(window_size)/float(window_size)\n",
+    "aapl_avg = np.convolve(aapl, window, 'same')\n",
+    "\n",
+    "#output \n",
+    "output_file(\"stocks.html\", title=\"stocks.py example\")\n",
+    "\n",
+    "#créer un nouveau plot avec un axis datetime\n",
+    "p = figure(width=800, height=350, x_axis_type=\"datetime\")\n",
+    "\n",
+    "#ajouter les data \n",
+    "p.circle(aapl_dates, aapl, size=4, color='darkgrey', alpha=0.2, legend='close')\n",
+    "p.line(aapl_dates, aapl_avg, color='navy', legend='avg')\n",
+    "\n",
+    "#Customiser les attribues \n",
+    "p.title.text = \"AAPL One-Month Average\"\n",
+    "p.legend.location = \"top_left\"\n",
+    "p.grid.grid_line_alpha = 0\n",
+    "p.xaxis.axis_label = 'Date'\n",
+    "p.yaxis.axis_label = 'Price'\n",
+    "p.ygrid.band_fill_color = \"olive\"\n",
+    "p.ygrid.band_fill_alpha = 0.1\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pour aller plus loin \n",
+    "Pour explorer plus en détail bokeh nous vous invitons à consulter la documentation officiel <https://bokeh.pydata.org/en/latest/index.html>\n",
+    "\n",
+    "#### L'activité \n",
+    "L'activité Map.ipynb met en application l'utilisation de bokeh ainsi que celle des API. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
