--- a/Atelier2/API.ipynb
+++ b/Atelier2/API.ipynb
@@ -46,7 +46,11 @@
    "source": [
     "## L'API Google Map \n",
     "Malheureusement, depuis juillet 2018 Google a changé sa politique concernant l'utilisation de son API Google Map. C'est ce qui vous permet d'afficher une carte qui géolocalise les points relais disponibles pour vos clients. Pour afficher une carte Google Maps, il est nécessaire de spécifier une *clé d'API*. Nous allons voir dans cette séance comment l'obtenir et l'utiliser.\n",
-    "\n"
+    "\n",
+    "### La clé API \n",
+    "Une clé API est un code utilisé par les programmes informatiques qui appellent nos API (peu importe l'éditeur) pour identifier le programme demandeur, son développeur ou son utilisateur. Les clés API sont utilisées pour suivre et contrôler l'utilisation de l'API. Par exemple, cela permet de filtrer l'utilisation ce celle-ci et d'éviter des utilisations frauduleuses ou abusives. \n",
+    "\n",
+    "Elles ont souvent une forme atypique *ex : 'AIzaSyAYXIJSSMvMAcBIngsIiKaTRQde2O_zkas' généré par TheHackademy*\n"
    ]
   },
   {
