--- a/StatBasics.ipynb
+++ b/StatBasics.ipynb
@@ -21,7 +21,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## Vocabulaire \n",
     "\n",
     "Avant de se lancer directement dans l’exploitation des résultats, nous devons fixer quelques mots de vocabulaire. En effet, nous allons avoir beaucoup d’informations et plusieurs types de variables. Il est donc nécessaire de bien formaliser tout ceci au début.\n",
@@ -73,6 +72,14 @@
     "#### Test statistique \n",
     "Procédure pour juger de la vraisemblance de la valeur d’une statistique hypothétique d’une population. On compare la valeur observée pour une statistique d’échantillon au hasard dans cette population, à celles attendues en supposant l’hypothèse vraie. On juge l’hypothèse fausse, si l’écart observé est supérieur à un seuil, fixé en fonction d’un risque d’erreur.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pour aller plus loin \n",
+    "Pour plus de détail *google it* ! Plus sérieusement vous pouvez consulter <https://fr.wikipedia.org>, généralement on y trouve de très bon éléments de vulgarisation. En ce qui concerne la statistique descriptive à une dimension vous pouvez aussi jeter un oeil au cours en ligne de Maxime <https://zestedesavoir.com/tutoriels/1669/statistique-descriptive-a-une-dimension/>. "
    ]
   },
   {
