--- a/Atelier2/Map.ipynb
+++ b/Atelier2/Map.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
-    "#Pour plus de détails voir le fichier Librairies.ipynb\n",
+    "#Pour plus de détails sur la librairie Bokeh voir le fichier Librairies.ipynb\n",
     "from bokeh.io import output_file, show\n",
     "from bokeh.models import ColumnDataSource, GMapOptions, BoxSelectTool\n",
     "from bokeh.plotting import gmap\n",
     "from bokeh.models.mappers import LinearColorMapper\n",
-    "from bokeh.palettes import Viridis5\n",
-    "\n"
+    "from bokeh.palettes import Viridis5"
    ]
   },
   {
@@ -38,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#charger le dataset\n",
-    "dataset = pd.read_csv(\"clean/listings.csv\", sep=\";\")"
+    "dataset = pd.read_csv(\"../clean/listings.csv\", sep=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +102,141 @@
     "p.add_tools(BoxSelectTool())\n",
     "#ouverture du graphique \n",
     "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#petit bonnus : affichage des mots les plus courants  \n",
+    "from collections import Counter\n",
+    "#utilisation des collections cf : https://docs.python.org/2/library/collections.html\n",
+    "def most_common_word(labels):\n",
+    "    words = []\n",
+    "    for lab in labels : \n",
+    "        words += lab.split(\" \")\n",
+    "    counter = Counter(words)\n",
+    "    for word in counter.most_common(100):\n",
+    "        print(word)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Paris', 162)\n",
+      "('-', 150)\n",
+      "('de', 113)\n",
+      "('in', 92)\n",
+      "('Appartement', 83)\n",
+      "('Studio', 78)\n",
+      "('2', 75)\n",
+      "('Marais', 73)\n",
+      "('studio', 56)\n",
+      "('Eiffel', 55)\n",
+      "('&', 49)\n",
+      "('à', 44)\n",
+      "('du', 44)\n",
+      "('', 43)\n",
+      "('Chambre', 42)\n",
+      "('apartment', 42)\n",
+      "('of', 40)\n",
+      "('the', 39)\n",
+      "('appartement', 38)\n",
+      "('Cosy', 37)\n",
+      "('3', 37)\n",
+      "('au', 36)\n",
+      "('flat', 36)\n",
+      "('dans', 35)\n",
+      "('Saint', 34)\n",
+      "('avec', 32)\n",
+      "('pièces', 32)\n",
+      "('and', 31)\n",
+      "('et', 31)\n",
+      "('des', 30)\n",
+      "('personnes', 30)\n",
+      "('coeur', 29)\n",
+      "('Charming', 29)\n",
+      "('Le', 29)\n",
+      "('Tour', 29)\n",
+      "('Germain', 28)\n",
+      "('cosy', 28)\n",
+      "('room', 25)\n",
+      "('4', 25)\n",
+      "('le', 24)\n",
+      "('Tower', 24)\n",
+      "('near', 24)\n",
+      "('!', 24)\n",
+      "('PARIS', 23)\n",
+      "('Charmant', 23)\n",
+      "('Parisian', 22)\n",
+      "('St', 22)\n",
+      "('Loft', 22)\n",
+      "('heart', 22)\n",
+      "('Martin', 21)\n",
+      "('Apartment', 21)\n",
+      "('to', 21)\n",
+      "('1', 21)\n",
+      "('MARAIS', 20)\n",
+      "('Champs', 20)\n",
+      "('près', 20)\n",
+      "('Luxury', 20)\n",
+      "('/', 19)\n",
+      "('Canal', 19)\n",
+      "('with', 19)\n",
+      "('lumineux', 19)\n",
+      "('quartier', 18)\n",
+      "('Beautiful', 18)\n",
+      "('Louvre', 17)\n",
+      "('Flat', 17)\n",
+      "('sur', 17)\n",
+      "('calme', 16)\n",
+      "('proche', 16)\n",
+      "('Bastille', 16)\n",
+      "('Grand', 16)\n",
+      "('m2', 15)\n",
+      "('Duplex', 15)\n",
+      "('plein', 15)\n",
+      "('APPARTEMENT', 15)\n",
+      "('loft', 15)\n",
+      "('cœur', 15)\n",
+      "('bedroom', 15)\n",
+      "('Magnifique', 15)\n",
+      "('centre', 14)\n",
+      "('en', 14)\n",
+      "('Lovely', 13)\n",
+      "('on', 13)\n",
+      "('pour', 12)\n",
+      "('for', 12)\n",
+      "('la', 12)\n",
+      "('EIFFEL', 12)\n",
+      "('1Ch/1Sdb,', 12)\n",
+      "('Montorgueil', 12)\n",
+      "('vue', 12)\n",
+      "('Apt', 11)\n",
+      "('a', 11)\n",
+      "('view', 11)\n",
+      "('DE', 11)\n",
+      "('Family', 11)\n",
+      "('Suite', 11)\n",
+      "('chambre', 10)\n",
+      "('Petit', 10)\n",
+      "('Bedroom', 10)\n",
+      "('Montmartre', 10)\n",
+      "('Superbe', 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#renvoyer la liste des mots les plus courant ainsi que leurs occurrences \n",
+    "most_common_word(dataset['name'].values)"
    ]
   },
   {
