update linear regression

--- a/StatBasics.ipynb
+++ b/StatBasics.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "Il existe plusieurs manières de minimiser une erreur. La plus utilisée est celle qui minimise la somme des carrés de l'erreur $y_i−ŷ_i$ . On l'appelle **méthode des moindres carrés ordinaire (MCO)**.\n",
     "\n",
-    "![regression.png](attachment:regression.png)\n",
+    "![./img/regression.png](attachment:regression.png)\n",
     "*Voir l'application dans le repo Atelier3.* "
    ]
   },
