update linear regression

--- a/StatBasics.ipynb
+++ b/StatBasics.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\operatorname{E(X)}$$"
+    "$$\\mathbb{E(X)}$$"
    ]
   },
   {
