update linear regression & moving average

--- a/StatBasics.ipynb
+++ b/StatBasics.ipynb
@@ -89,14 +89,23 @@
    "metadata": {},
    "source": [
     "#### Espérance mathématique\n",
-    "En théorie des probabilités, l'espérance mathématique d'une variable aléatoire réelle est, intuitivement, la valeur que l'on s'attend à trouver, en moyenne, si l'on répète un grand nombre de fois la même expérience aléatoire. Elle se note pour une variable X : "
+    "En théorie des probabilités, l'espérance mathématique d'une variable aléatoire réelle est, intuitivement, la valeur que l'on s'attend à trouver, en moyenne, si l'on répète un grand nombre de fois la même expérience aléatoire. Elle se note pour une variable X : $$\\mathbb{E(X)}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbb{E(X)}$$"
+    "#### Moyenne Mobile \n",
+    "La moyenne mobile, ou moyenne glissante, est un type de moyenne statistique utilisée pour analyser des séries ordonnées de données, le plus souvent des séries temporelles, en supprimant les fluctuations transitoires de façon à en souligner les tendances à plus long terme. Cette moyenne est dite mobile parce qu'elle est recalculée de façon continue, en utilisant à chaque calcul un sous-ensemble d'éléments dans lequel un nouvel élément remplace le plus ancien ou s'ajoute au sous-ensemble. Ce type de moyenne est utilisé généralement comme méthode de lissage de valeurs, en particulier dans le domaine financier pour l'analyse technique de cours boursiers.\n",
+    "\n",
+    "Une formule simple permettant de calculer une moyenne mobile d'observations $(X)_n$ est : \n",
+    "$$\\bar{x}_n = \\frac{1}{\\mathrm{N}} \\ \\displaystyle{\\sum_{k=0}^{N-1} \\; {x_{n - k}}} \\text{, ou bien } \\bar{x}_n = \\bar{x}_{n-1} + \\frac{ x_n - x_{n - \\mathrm{N}} }{\\mathrm{N}}$$\n",
+    "\n",
+    "Pour une série temporelle $(X_t)$, on peut créer une nouvelle série $(Y_t)$ de la manière suivante :\n",
+    "$$Y_t=\\frac{1}{2k+1} \\sum_{l=t-k}^{t+k} X_l$$\n",
+    "$(Y_t)$ s'appelle donc la moyenne mobile **d'ordre $k$**, $k$ étant le nombre de voisins à gauche (et à droite) que l'on considère pour moyenner.\n",
+    "*Voir le repo Atelier3 pour l'utilisation de la moyenne mobile* "
    ]
   },
   {
@@ -120,6 +129,9 @@
    "source": [
     "#### Intervalle de confiance (I.C.) et niveau de confiance a)  \n",
     "Intervalle de valeurs d’une variable quantitative dont la probabilité (niveau de confiance, a) est forte (par exemple 95%). L’intervalle est \"Bilatéral\" s’il est symétrique (les probabilités des intervalles à gauche et à droite de l’I.C. sont égales à a/2), \"unilatéral\" s’il est \"cadré\" à gauche ou à droite de l’étendue des valeurs.\n",
+    "\n",
+    "#### Les séries temporelles \n",
+    "Une série temporelle, ou série chronologique, est une suite de valeurs numériques représentant l'évolution d'une quantité spécifique au cours du temps. L'objet des séries temporelles est l'étude des variables au cours du temps. Parmi ses principaux objectifs figurent la détermination de tendances au sein de ces séries ainsi que la stabilité des valeurs (et de leur variation) au cours du temps.\n",
     "\n",
     "#### Prévision  \n",
     "Information concernant le futur. En statistique, ordre de grandeur pour la valeur future, donc inconnue, d’une statistique d’échantillon aléatoire, calculée à partir de valeurs statistiques connues de la population dont il est extrait.\n",
@@ -162,7 +174,7 @@
     "\n",
     "### En vrai  \n",
     "\n",
-    "Faire une rgréssion linéaire revient à modéliser une relation entre une variable et une (ou plusieur) autres variables par l'équation : $$y_i=\\beta_0 + \\beta_1 x_i $$\n",
+    "Faire une régression linéaire revient à modéliser une relation entre une variable et une (ou plusieur) autres variables par l'équation : $$y_i=\\beta_0 + \\beta_1 x_i $$\n",
     "\n",
     "En effet cette modélisation n'est pas tout-à-fait exacte, elle est même très simpliste. En écrivant cette équation, nous savons que nous commettons une certaine erreur entre la valeur prédite et la vraie valeur de la prochaine observation. Nous intégrons donc cette erreur à l'équation, en l'appelant *$\\varepsilon_i$*. L'équation devient donc : \n",
     "$$y_i=\\beta_0 + \\beta_1 x_i  + \\varepsilon_i$$\n",
