--- a/Atelier6/CART_Ameliore.ipynb
+++ b/Atelier6/CART_Ameliore.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,14 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +39,7 @@
     }
    ],
    "source": [
-    "prices = pd.read_csv(\"/home/maxime/Documents/Hackademy/Codes Formations/Datagram_AirBnB/data/price_availability.csv\", sep=\";\")\n",
+    "prices = pd.read_csv(\"../data/price_availability.csv\", sep=\";\")\n",
     "listings = pd.read_csv(\"../clean/listings_final.csv\", sep=\";\")\n",
     "listings = listings.drop(589)  # Cet individu n'a pas de prix !\n",
     "print(\"Chargement des données effectué.\")"
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +131,7 @@
        "4       56093 2018-09-24        170.0"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +153,7 @@
        "(18981, 3)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,35 +164,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>local_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56093</td>\n",
+       "      <td>2018-08-27</td>\n",
+       "      <td>170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56093</td>\n",
+       "      <td>2018-09-03</td>\n",
+       "      <td>170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>56093</td>\n",
+       "      <td>2018-09-10</td>\n",
+       "      <td>170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56093</td>\n",
+       "      <td>2018-09-17</td>\n",
+       "      <td>170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56093</td>\n",
+       "      <td>2018-09-24</td>\n",
+       "      <td>170.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   listing_id       date  local_price\n",
+       "0       56093 2018-08-27        170.0\n",
+       "1       56093 2018-09-03        170.0\n",
+       "2       56093 2018-09-10        170.0\n",
+       "3       56093 2018-09-17        170.0\n",
+       "4       56093 2018-09-24        170.0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Y = []\n",
-    "\n",
-    "for i, row in listings.iterrows():\n",
-    "    y = 0\n",
-    "    ID = int(row[\"listing_id\"])\n",
-    "    subset = listings_prices[listings_prices[\"listing_id\"] == ID]\n",
-    "    y = subset[\"local_price\"].mean()\n",
-    "    Y.append(y)"
+    "week_prices.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def populate(row):\n",
+    "    return row.append(listings[listings[\"listing_id\"] == row[\"listing_id\"]].iloc[0,2:])\n",
+    "    \n",
+    "X = week_prices.apply(populate, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18981, 20)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "X[\"label_dates\"] =  label_encoder.fit_transform(X[\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18981, 21)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(\n",
-    "    listings.loc[:, [\"latitude\", \"longitude\", \"is_fully_refundable\", \"person_capacity\", \"bedrooms\", \"bathrooms\"]],\n",
-    "    np.asarray(Y),\n",
-    "    test_size=0.2, random_state=10)"
+    "    X.loc[:, [\"label_dates\", \"latitude\", \"longitude\", \"person_capacity\", \"bedrooms\", \"bathrooms\"]],\n",
+    "    X.loc[:, \"local_price\"],\n",
+    "    test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +335,7 @@
        "           presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variance score: 0.3997\n"
+      "Variance score: 0.7333\n"
      ]
     }
    ],
@@ -232,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +378,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
