--- a/Atelier6/Encodage.ipynb
+++ b/Atelier6/Encodage.ipynb
@@ -24,11 +24,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Encodage par dictionnaire\n",
+    "\n",
+    "L'encodage par dictionnaire est fréquemment utilisé en NLP pour assimilier un mot particulier à un indice. Par exemple, si la phrase *le chat adore le poisson*, la phase pourra être encodée par *0 1 2 0 3*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Encodage *one-hot*\n",
     "\n",
-    "Un premier type d'encodage, particulièrement utilisé en NLP (traitement du langage) est l'encodage *one-hot*. Le principe est suivant : on dispose d'une variable $X$ à $p$ modalités (pouvant prendre $p$ valeurs différentes) identifiées de $1$ à $p$. Pour représenter numériquement une observation de cette variable, on crée un vecteur de taille $p$ dont toutes les composantes sont nulles, sauf une composante qui vaut $1$ et qui correspond à la $i$⁻ème modalité.\n",
+    "Un autre type d'encodage, particulièrement utilisé en NLP (traitement du langage) est l'encodage *one-hot*. Le principe est le suivant : on dispose d'une variable $X$ à $p$ modalités (pouvant prendre $p$ valeurs différentes) identifiées de $1$ à $p$. Pour représenter numériquement une observation de cette variable, on crée un vecteur de taille $p$ dont toutes les composantes sont nulles, sauf une composante qui vaut $1$ et qui correspond à la $i$⁻ème modalité.\n",
     "\n",
-    "Par exemple, considérons quatre villes : Paris, Marseille, Nice et Bordeaux. On dispose d'une observation de la valeur est Nice. Dans ce cas, le vecteur *one-hot* associé à cette observation est :\n",
+    "Par exemple, considérons quatre villes : Paris, Marseille, Nice et Bordeaux. On dispose d'une observation dont la valeur est Nice. Dans ce cas, le vecteur *one-hot* associé à cette observation est :\n",
     "\n",
     "$$(0 \\quad 0 \\quad 1 \\quad 0)$$\n",
     "\n",
@@ -76,14 +85,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Encodage par dictionnaire\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Encodage transformé et circulaire\n",
     "\n",
     "Dans certains cas, même en présence de variables qualitatives, on souhaite obtenir un certain ordre lors du passage du qualitatif au numérique. Par exemple, on aimerait classer la météo selon plusieurs niveaux : proche de $0$ en cas de très mauvais temps, et proche de $1$ en cas de ciel bleu ensoleillé.\n",
@@ -117,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
