--- a/Atelier6/GradientBoosting.ipynb
+++ b/Atelier6/GradientBoosting.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,14 @@
     "\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +54,7 @@
     }
    ],
    "source": [
-    "prices = pd.read_csv(\"/home/maxime/Documents/Hackademy/Codes Formations/Datagram_AirBnB/data/price_availability.csv\", sep=\";\")\n",
+    "prices = pd.read_csv(\"../data/price_availability.csv\", sep=\";\")\n",
     "listings = pd.read_csv(\"../clean/listings_final.csv\", sep=\";\")\n",
     "listings = listings.drop(589)  # Cet individu n'a pas de prix !\n",
     "print(\"Chargement des données effectué.\")"
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +146,7 @@
        "4       56093 2018-09-24        170.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,35 +159,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y = []\n",
-    "\n",
-    "for i, row in listings.iterrows():\n",
-    "    y = 0\n",
-    "    ID = int(row[\"listing_id\"])\n",
-    "    subset = listings_prices[listings_prices[\"listing_id\"] == ID]\n",
-    "    y = subset[\"local_price\"].mean()\n",
-    "    Y.append(y)"
+    "def populate(row):\n",
+    "    return row.append(listings[listings[\"listing_id\"] == row[\"listing_id\"]].iloc[0,2:])\n",
+    "    \n",
+    "X = week_prices.apply(populate, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "X[\"label_dates\"] =  label_encoder.fit_transform(X[\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(\n",
-    "    listings.loc[:, [\"latitude\", \"longitude\", \"is_fully_refundable\", \"person_capacity\", \"bedrooms\", \"bathrooms\"]],\n",
-    "    np.asarray(Y),\n",
-    "    test_size=0.2, random_state=10)"
+    "    X.loc[:, [\"label_dates\", \"latitude\", \"longitude\", \"person_capacity\", \"bedrooms\", \"bathrooms\"]],\n",
+    "    X.loc[:, \"local_price\"],\n",
+    "    test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,11 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = {'max_depth':3, 'eta':0.1, 'silent':1, 'objective':'reg:linear' }\n",
+    "param = {'max_depth':3, 'eta':1, 'silent':1, 'objective':'reg:linear' }\n",
     "num_round = 100\n",
     "bst = xgb.train(param, dtrain, num_round)\n",
     "# make prediction\n",
@@ -209,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variance score: 0.5107\n"
+      "Variance score: 0.9239\n"
      ]
     }
    ],
@@ -248,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
